tests/js/error/semantics/builtin_string2.js
/*******************************************************************************
    Copyright (c) 2012, S-Core.
    All rights reserved.

    Use is subject to license terms.

    This distribution may include materials developed by third parties.
 ******************************************************************************/

var x = new String(undefined);

var __result1 = x.length
var __expect1 = 9
var __result2 = x[0]
var __expect2 = "u"
var __result3 = x[8]
var __expect3 = "d"
var __result4 = x[9]
var __expect4 = undefined

